test_all & test_single & refactor build system

--- a/storage_charge/CMakeLists.txt
+++ b/storage_charge/CMakeLists.txt
@@ -1,21 +1,12 @@
-file(GLOB_RECURSE all_tests
-    *_test.cpp
-    *_test.cc
-    *_test.c++
-)
+set(storage_core_libs storage_core storage_registry)
+set(storage_test_libs ${storage_core_libs} gtest gtest_main)
 
-file(GLOB_RECURSE all_srcs
-    *.cpp
-    *.cc
-    *.c++
-    *.c
-    *.C
-)
+add_subdirectory("core")
+add_subdirectory("registry")
 
-list(REMOVE_ITEM all_srcs ${all_tests})
-add_library(storage_charge STATIC ${all_srcs})
+add_subdirectory("block")
+add_subdirectory("file")
+add_subdirectory("object")
 
-add_executable(test_storage_charge ${all_tests})
-target_link_libraries(test_storage_charge storage_charge gtest gtest_main)
-
-add_test(NAME test_storage_charge COMMAND test_storage_charge)
+add_subdirectory("test_all")
+add_subdirectory("test_single")
